Fix timeline layout issue users#show

--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -785,13 +785,9 @@ body
         +border-radius(4px)
         li
           +transition(.2s)
-          text-indent: 3em
-          padding: 1.4em
+          padding: 1em 1em 1em 50px
           background: white 
           border: 1px solid lighten(gray, 45%)
-          h4
-            font-weight: 200
-            line-height: .8em
           p
             font-size: .7em
             font-style: italic
